<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:checked="false"
            android:icon="@drawable/ic_icon_football"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/nav_profile"
            android:checked="false"
            android:icon="@drawable/ic_icon_football"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/nav_list"
            android:checked="false"
            android:icon="@drawable/ic_icon_football"
            android:title="@string/navigation_view_item_3" />


    </group>


    <item
        android:id="@+id/navigasi_kategori_2"
        android:title="@string/navigasi_kategori_2">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:checked="false"
                android:icon="@drawable/ic_icon_football"
                android:title="@string/navigation_view_item_4" />
            <item
                android:id="@+id/nav_about"
                android:checked="false"
                android:icon="@drawable/ic_icon_football"
                android:title="@string/navigation_view_item_5" />

        </menu>
    </item>

</menu>